--- a/apps/fusion/project/ws/app/src/lib/routes/user-profile/components/user-profile/user-profile.component.html
+++ b/apps/fusion/project/ws/app/src/lib/routes/user-profile/components/user-profile/user-profile.component.html
@@ -416,7 +416,8 @@
 
           </div>
         </mat-tab>
-        <mat-tab *ngIf="!isForcedUpdate">
+        <!-- <mat-tab *ngIf="!isForcedUpdate"> -->
+        <mat-tab *ngIf="false">
           <ng-template mat-tab-label i18n>
             Academics
           </ng-template>
@@ -637,7 +638,8 @@
             </div>
           </div>
         </mat-tab>
-        <mat-tab *ngIf="!isForcedUpdate">
+        <!-- <mat-tab *ngIf="!isForcedUpdate"> -->
+        <mat-tab *ngIf=false>
           <ng-template mat-tab-label i18n>
             Professional Details
           </ng-template>
@@ -956,7 +958,8 @@
             </div>
           </div>
         </mat-tab>
-        <mat-tab *ngIf="!isForcedUpdate">
+        <!-- <mat-tab *ngIf="!isForcedUpdate"> -->
+        <mat-tab *ngIf=false>
           <ng-template mat-tab-label i18n>
             Certification & Skills
           </ng-template>
