--- a/apps/fusion/project/ws/author/src/lib/routing/modules/editor/shared/components/edit-meta/edit-meta.component.html
+++ b/apps/fusion/project/ws/author/src/lib/routing/modules/editor/shared/components/edit-meta/edit-meta.component.html
@@ -218,6 +218,7 @@
                 </div>
               </div>
               <div class="mobile-break mat-app-background">
+
                 <div class="margin-top-s">
                   <div class="margin-top-xs" *ngIf="checkCondition('name', 'show')"
                     [ngClass]="{ disable: checkCondition('name', 'disabled') }">
@@ -237,6 +238,8 @@
                     </mat-form-field>
                   </div>
                 </div>
+
+
                 <div class="margin-top-s" *ngIf="checkCondition('subTitle', 'show')"
                   [ngClass]="{ disable: checkCondition('subTitle', 'disabled') }">
                   <p class="margin-remove-bottom" [ngClass]="{ required: checkCondition('subTitle', 'required') }">
@@ -1078,7 +1081,8 @@
                           <mat-chip *ngFor="let author of contentForm.controls.creatorContacts.value"
                             [selectable]="selectable" [removable]="removable"
                             (removed)="removeEmployee(author, 'creatorContacts')">
-                            {{ author.name }}
+                            {{ author.name }} {{showEmailWithName ? '|' : ''}} {{showEmailWithName ?
+                            authorEmailList[author.id] : '' }}
                             <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
                           </mat-chip>
                           <input i18n-placeholder placeholder="Search by mail" #creatorContactsView
@@ -1119,8 +1123,9 @@
                         <mat-chip-list #creatorDetailsChipList aria-label="Original Author selection">
                           <mat-chip *ngFor="let author of contentForm.controls.creatorDetails.value"
                             [selectable]="selectable" [removable]="removable" (removed)="removeCreatorDetails(author)">
-                            {{ author.name }} {{showEmailWithName ? '|' : '' }} {{ showEmailWithName ? author.email : ''
-                            }}
+                            <!-- {{ author.name }} {{showEmailWithName ? '|' : '' }} {{ showEmailWithName ? author.email : ''
+                            }} -->
+                            {{ author.name }}
                             <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
                           </mat-chip>
                           <input i18n-placeholder placeholder="Enter name" #creatorDetailsView
@@ -1180,7 +1185,8 @@
                           <mat-option *ngIf="fetchTagsStatus === 'done' && !employeeList.length" i18n>
                             No user found. Please check the value entered.</mat-option>
                           <mat-option *ngFor="let author of employeeList" [value]="author">
-                            {{ author.displayName }} | {{ author.mail }}
+                            <!-- {{ author.displayName }} | {{ author.mail }} -->
+                            {{ author.displayName }}
                           </mat-option>
                         </mat-autocomplete>
                         <mat-error class="error-font" *ngIf="showError('trackContacts')" i18n>Reviewer is mandatory
