Naming Customization, Profile Update fix

--- a/apps/fusion/project/ws/admin/src/lib/modules/tenant-admin/routes/users/create-userV2/create-userV2.component.html
+++ b/apps/fusion/project/ws/admin/src/lib/modules/tenant-admin/routes/users/create-userV2/create-userV2.component.html
@@ -1,11 +1,11 @@
 <div class="m-1 md:m-4">
   <div class="flex items-center mb-4">
     <span class="font-weight-500 cursor-pointer" routerLink="/admin/tenant/users" i18n>
-      users
+      Users
     </span>
     <mat-icon class="mx-1">play_arrow</mat-icon>
     <span class="font-weight-500" i18n>
-      create new user
+      Create New User
     </span>
   </div>
   <h1 class="leading-10 pt-3 font-weight-500" i18n>Create New User</h1>
