--- a/apps/fusion/project/ws/admin/src/lib/modules/tenant-admin/tenant-admin.component.html
+++ b/apps/fusion/project/ws/admin/src/lib/modules/tenant-admin/tenant-admin.component.html
@@ -38,7 +38,7 @@
       </a>
       <a *ngIf="!restrictedFeatures?.has('adminFeatureBulkUpload')" mat-list-item routerLinkActive="mat-toolbar"
         [routerLink]="'/admin/tenant/user-bulk-upload'">
-        <span class="padding-left-s" i18n>User Bulk Upload</span>
+        <span class="padding-left-s" i18n>Bulk User Upload</span>
       </a>
     </mat-nav-list>
 
