--- a/apps/fusion/project/ws/admin/src/lib/modules/tenant-admin/routes/user-bulk-upload/user-bulk-upload.component.html
+++ b/apps/fusion/project/ws/admin/src/lib/modules/tenant-admin/routes/user-bulk-upload/user-bulk-upload.component.html
@@ -1,4 +1,4 @@
-<h2>User Bulk upload</h2>
+<h2>Bulk User Upload</h2>
 
 <div class="flex flex-wrap">
     <div class="flex flex-row fle-wrap w-full">
@@ -12,13 +12,13 @@
                     <input type="file" class="mb-5" (change)="onFileChange($event)" />
                     <!-- <input type="submit" [disabled]="formGroup.invalid" value="upload" /> -->
                     <mat-error *ngIf="showFileError">Only .xlsx are accepted</mat-error>
-                    
-                    <mat-form-field appearance="outline" class="w-full margin-top-xs">
+
+                    <!-- <mat-form-field appearance="outline" class="w-full margin-top-xs">
                         <mat-select formControlName="department" i18n-placeholder placeholder="--Select Department Name--">
                             <mat-option [value]="dept.department_name" *ngFor="let dept of departments">{{dept.department_name}}
                             </mat-option>
                         </mat-select>
-                    </mat-form-field>
+                    </mat-form-field> -->
                     <div class="mt-5 text-right">
                         <div *ngIf="displayLoader | async" class="pr-4 flex items-center justify-center">
                             <mat-spinner [diameter]="30"></mat-spinner>
@@ -46,7 +46,7 @@
             <mat-spinner *ngIf="fetching"></mat-spinner>
         </div>
         <div class="pt-2 mat-elevation-z8">
-            <div class="m-5 flex items-end justify-end"> 
+            <div class="m-5 flex items-end justify-end">
                 <button mat-raised-button color="primary" class="self-end" i18n (click)="refreshTable()">
                     <ng-container i18n>Refresh</ng-container>
                 </button>
@@ -68,16 +68,16 @@
 
                 <!-- status Column -->
                 <ng-container matColumnDef="status">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> status </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
                     <td mat-cell *matCellDef="let row"> {{row.status}} </td>
                 </ng-container>
 
                 <!-- report Column -->
                 <ng-container matColumnDef="report">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> report </th>
-                    <td mat-cell *matCellDef="let row"> 
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Report </th>
+                    <td mat-cell *matCellDef="let row">
                         <button mat-raised-button color="primary" i18n *ngIf="row.status === 'completed'"
-                        (click)="downloadReport(row)">
+                            (click)="downloadReport(row)">
                             <ng-container i18n>Download</ng-container>
                         </button>
                     </td>
@@ -90,7 +90,7 @@
                 <tr class="mat-row" *matNoDataRow>
                     <td class="mat-cell" colspan="4">No data ...</td>
                 </tr>
-                
+
             </table>
 
             <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
@@ -98,7 +98,7 @@
     </div>
 </div>
 
-<input type="hidden" i18-value i18-aria-value aria-value="Bulk user creation successful..!"
-    [value]="uplaodSuccessMsg" #toastSuccess />
+<input type="hidden" i18-value i18-aria-value aria-value="Bulk user creation successful..!" [value]="uplaodSuccessMsg"
+    #toastSuccess />
 <input type="hidden" i18-value i18-aria-value aria-value="Unable to process bulk user creation..!"
     value="Unable to process bulk user creation..!" #toastError />
