--- a/apps/fusion/project/ws/admin/src/lib/modules/tenant-admin/routes/user-bulk-upload/user-bulk-upload.component.html
+++ b/apps/fusion/project/ws/admin/src/lib/modules/tenant-admin/routes/user-bulk-upload/user-bulk-upload.component.html
@@ -76,7 +76,7 @@
                 <ng-container matColumnDef="report">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Report </th>
                     <td mat-cell *matCellDef="let row">
-                        <button mat-raised-button color="primary" i18n *ngIf="row.status === 'completed'"
+                        <button mat-raised-button color="primary" i18n *ngIf="row.status === 'Completed' || 'completed'"
                             (click)="downloadReport(row)">
                             <ng-container i18n>Download</ng-container>
                         </button>
