--- a/apps/fusion/project/ws/app/src/lib/routes/user-profile/components/user-profile/user-profile.component.html
+++ b/apps/fusion/project/ws/app/src/lib/routes/user-profile/components/user-profile/user-profile.component.html
@@ -1052,6 +1052,7 @@
           <span class="text-white" i18n>
             Save Details
           </span>
+          <!-- <pre>{{createUserForm.valid}}</pre> -->
         </button>
 
         <!-- <button mat-raised-button type="button" class="text-white ws-mat-primary-background text-white"
