--- a/apps/fusion/project/ws/app/src/lib/routes/social/routes/blogs/recent-blogs/components/recent-blog.component.html
+++ b/apps/fusion/project/ws/app/src/lib/routes/social/routes/blogs/recent-blogs/components/recent-blog.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar [color]="pageNavbar.color" [ngStyle]="pageNavbar?.styles">
+<mat-toolbar [color]="pageNavbar.color" [ngStyle]="pageNavbar?.styles" style="margin: 10px;">
   <ws-widget-btn-page-back [widgetData]="{ url: 'back' }"></ws-widget-btn-page-back>
 
   <span i18n class="margin-left-xs">Recent Blogs</span>
@@ -7,7 +7,8 @@
     max-width: 500px;
     box-sizing: border-box;
     border-radius: 50px;
-    max-height: 50px;">
+    max-height: 38px;
+    margin: 5px 10px 0 0;">
 
     <div class="w-full search">
 
@@ -15,7 +16,7 @@
         [floatLabel]="'never'">
         <input type="search" class="border-2 border-gray-300 bg-white pr-16 rounded-lg text-sm focus:outline-none"
           i18n-placeholder="search content" [placeholder]="placeHolder" i18-aria-label aria-label="Query"
-          style="width:90%;margin-left: 10%;" matInput [(ngModel)]="queryEntered" />
+          style="width:90%;margin: 5px 0px 0px 15px;" matInput [(ngModel)]="queryEntered" />
 
       </mat-form-field>
 
